added left side menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,18 @@
     <string name="cell_3">3x3 cells</string>
     <string name="cell_4">4x4 cells</string>
     <string name="cell_5">5x5 cells</string>
+    <string name="drawer_open">Open settings</string>
+    <string name="drawer_close">Close settings</string>
+    <string name="sound_on">Sound On</string>
+    <string name="sound_off">Sound Off</string>
+    <string name="from_gallery">From gallery</string>
+    <string name="from_pallete">From pallete</string>
+    <string-array name="menu_array">
+    <item>3x3 cells</item>
+    <item>4x4 cells</item>
+    <item>5x5 cells</item>
+    <item>From gallery</item>
+    <item>Sound</item>
+</string-array>
+
 </resources>
